--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -3,17 +3,20 @@
   width: 86%;
   margin: 0 7% 0 7%;
   header {
+    background-color: white;
     color: $fontColor;
     border-bottom: $borderStyle $fontColor;
-    display: flex;
+    display:flex;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
+    width: 86%;
     padding: 15px;
   }
   .info {
     display: flex;
     a {
       padding: 10px;
-      color: $fontColor;
       margin-right: 10px;
     }
     button {
