--- a/public/css/app.css
+++ b/public/css/app.css
@@ -79,7 +79,7 @@ main .jumbo {
 
 main .jumbo {
   font-size: 25px;
-  line-height: 1.4;
+  line-height: 1.5;
   margin-right: 50px;
 }
 
@@ -108,7 +108,8 @@ main a {
   color: #58402C;
 }
 
-.jumboPink {
+.jumboPink,
+.final-pink {
   display: -webkit-box;
   display: flex;
   -webkit-box-orient: vertical;
@@ -119,13 +120,15 @@ main a {
           align-items: center;
 }
 
-.jumboPink .title {
+.jumboPink .title,
+.final-pink .title {
   width: 730px;
   text-align: center;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 
-.jumboPink .title h2 {
+.jumboPink .title h2,
+.final-pink .title h2 {
   padding: 70px 100px 0;
 }
 
@@ -163,7 +166,139 @@ main a {
 
 .threeBlockContainer .block .text {
   width: 160px;
-  line-height: 1.4;
+  line-height: 1.5;
   text-align: center;
+}
+
+.rabbitImg {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-pack: center;
+          justify-content: center;
+  padding: 80px 0 80px;
+  width: 86%;
+  margin-bottom: 50px;
+  border-bottom: 1px solid #58402C;
+}
+
+.rabbitImg img {
+  width: 280px;
+}
+
+#container {
+  display: -webkit-box;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+          flex-direction: column;
+}
+
+#container .feedback-container,
+#container .survey-container {
+  display: -webkit-box;
+  display: flex;
+  width: 100%;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+#container .feedback-container .feedback-img,
+#container .survey-container .feedback-img,
+#container .survey-container .survey-img,
+#container .feedback-container .feedback-learnMore,
+#container .survey-container .feedback-learnMore,
+#container .survey-container .survey-learnMore {
+  width: 50%;
+}
+
+#container .feedback-container .feedback-img img,
+#container .survey-container .feedback-img img,
+#container .survey-container .survey-img img,
+#container .feedback-container .feedback-learnMore img,
+#container .survey-container .feedback-learnMore img,
+#container .survey-container .survey-learnMore img {
+  max-width: 100%;
+}
+
+#container .feedback-container .feedback-learnMore,
+#container .survey-container .feedback-learnMore,
+#container .survey-container .survey-learnMore {
+  margin-left: 20px;
+}
+
+#container .feedback-container .feedback-learnMore .learnMore-top,
+#container .survey-container .feedback-learnMore .learnMore-top,
+#container .survey-container .survey-learnMore .learnMore-top,
+#container .survey-container .survey-learnMore .surveyLearnMore-top {
+  width: 295px;
+  line-height: 1.5;
+}
+
+#container .feedback-container .feedback-learnMore .learnMore-top p,
+#container .survey-container .feedback-learnMore .learnMore-top p,
+#container .survey-container .survey-learnMore .learnMore-top p,
+#container .survey-container .survey-learnMore .surveyLearnMore-top p,
+#container .feedback-container .feedback-learnMore .learnMore-top a,
+#container .survey-container .feedback-learnMore .learnMore-top a,
+#container .survey-container .survey-learnMore .learnMore-top a,
+#container .survey-container .survey-learnMore .surveyLearnMore-top a {
+  font-size: 20px;
+  padding-bottom: 30px;
+}
+
+#container .feedback-container .feedback-learnMore .learnMore-bottom,
+#container .survey-container .feedback-learnMore .learnMore-bottom,
+#container .survey-container .survey-learnMore .learnMore-bottom,
+#container .survey-container .survey-learnMore .surveyLearnMore-bottom {
+  width: 300px;
+  padding: 20px 0 0 50px;
+}
+
+#container .feedback-container .feedback-learnMore .learnMore-bottom img,
+#container .survey-container .feedback-learnMore .learnMore-bottom img,
+#container .survey-container .survey-learnMore .learnMore-bottom img,
+#container .survey-container .survey-learnMore .surveyLearnMore-bottom img {
+  width: 100%;
+}
+
+#container .survey-container {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+          flex-direction: row-reverse;
+  margin-top: 0px;
+}
+
+#container .survey-container .survey-learnMore .surveyLearnMore-top {
+  margin-left: 35%;
+  width: 385px;
+}
+
+#container .survey-container .survey-learnMore .surveyLearnMore-bottom {
+  margin-left: 40%;
+}
+
+.final-pink {
+  -webkit-box-pack: center;
+          justify-content: center;
+}
+
+.final-pink .title-text {
+  padding: 60px 0;
+  line-height: 1.5;
+  width: 400px;
+  font-size: 25px;
+}
+
+.final-pink .whiteSquare {
+  background-color: white;
+  width: 550px;
+  line-height: 1.5;
+  padding: 20px;
+  border: 1px solid grey;
+  border-radius: 5px;
+}
+
+.final-pink .whiteSquare p {
+  padding: 10px;
 }
 
