--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,5 +1,6 @@
 @import 'partials/_variables';
 @import 'partials/_general';
 @import 'partials/_header';
-@import 'partials/_main';
+@import 'partials/_main-top';
+@import 'partials/_main-bottom';
 @import 'partials/_footer';
