--- a/src/scss/partials/_main-top.scss
+++ b/src/scss/partials/_main-top.scss
@@ -19,7 +19,7 @@ main {
     width: 100%;
   }
   .google {
-    @include buttonProperty();
+    @include buttonProperty($buttonColor);
   }
   .slack {
     @extend .google;
