--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -1,1 +1,34 @@
 //barra finale
+footer {
+  @include sizeContainer();
+  display: flex;
+  padding: 50px 0 30px;
+  .column-teambit{
+    display: flex;
+    width: 425px;
+    margin-right: 30px;
+    img {
+      height: 75px;
+      width: 150px;
+      padding: 15px;
+      margin-top: 15px;
+    }
+    p {
+      font-weight: bolder;
+      margin-top: 5%;
+      font-size: 20px;
+      a {
+        color: $buttonColor;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+  .column {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+    line-height: $lineHeight;
+  }
+}
