--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -7,9 +7,9 @@
 a {
   text-decoration: none;
   color: $fontColor;
-}
-a:hover {
-  color: $buttonColor;
+  &:hover {
+    color: $buttonColor;
+  }
 }
 body {
   color: $fontColor;
