--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,5 @@
 @import 'partials/_variables';
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import 'partials/_general';
 @import 'partials/_header';
 @import 'partials/_main-top';
