--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -10,7 +10,7 @@
     position: fixed;
     top: 0;
     width: 86%;
-    padding: 15px;
+    padding: 20px 15px;
   }
   .info {
     display: flex;
