alcune modifiche di dimensioni, avendo cambiato font.

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -17,6 +17,7 @@
     a {
       padding: 10px;
       margin-right: 10px;
+      font-weight: bold;
     }
     button {
       @include otherButtonProp();
