--- a/public/css/app.css
+++ b/public/css/app.css
@@ -7,6 +7,7 @@
 a {
   text-decoration: none;
   color: #58402C;
+  font-size: 13px;
 }
 
 a:hover {
@@ -49,6 +50,7 @@ button {
 .container .info a {
   padding: 10px;
   margin-right: 10px;
+  font-weight: bold;
 }
 
 .container .info button {
@@ -80,7 +82,7 @@ main .jumbo {
 
 main .jumbo {
   font-size: 25px;
-  line-height: 1.5;
+  line-height: 1.6;
   margin-right: 50px;
 }
 
@@ -124,9 +126,9 @@ main a {
 
 .jumboPink .title,
 .final-pink .title {
-  width: 730px;
+  width: 760px;
   text-align: center;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 .jumboPink .title h2,
@@ -167,8 +169,8 @@ main a {
 }
 
 .threeBlockContainer .block .text {
-  width: 160px;
-  line-height: 1.5;
+  width: 180px;
+  line-height: 1.6;
   text-align: center;
 }
 
@@ -232,8 +234,8 @@ main a {
 #container .survey-container .feedback-learnMore .learnMore-top,
 #container .survey-container .survey-learnMore .learnMore-top,
 #container .survey-container .survey-learnMore .surveyLearnMore-top {
-  width: 295px;
-  line-height: 1.5;
+  width: 370px;
+  line-height: 1.6;
 }
 
 #container .feedback-container .feedback-learnMore .learnMore-top p,
@@ -286,15 +288,15 @@ main a {
 
 .final-pink .title-text {
   padding: 60px 0;
-  line-height: 1.5;
-  width: 400px;
+  line-height: 1.6;
+  width: 440px;
   font-size: 25px;
 }
 
 .final-pink .whiteSquare {
   background-color: white;
-  width: 550px;
-  line-height: 1.5;
+  width: 650px;
+  line-height: 1.6;
   padding: 20px 30px;
   border: 1px solid grey;
   border-radius: 5px;
@@ -335,25 +337,27 @@ footer {
 footer .column-teambit {
   display: -webkit-box;
   display: flex;
-  width: 425px;
+  width: 380px;
   margin-right: 30px;
+  line-height: 1.6;
 }
 
 footer .column-teambit img {
   height: 75px;
   width: 150px;
-  padding: 15px;
+  padding: 11px;
   margin-top: 15px;
 }
 
 footer .column-teambit p {
   font-weight: bolder;
   margin-top: 5%;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 footer .column-teambit p a {
   color: #30488F;
+  font-size: 18px;
 }
 
 footer .column-teambit p a:hover {
@@ -366,7 +370,7 @@ footer .column {
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
           flex-direction: column;
-  padding: 15px;
-  line-height: 1.5;
+  padding: 10px 20px;
+  line-height: 2.6;
 }
 
