--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,3 +1,8 @@
+$fa-font-path: 'fontawesome/fonts';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '~@fortawesome/fontawesome-free/scss/regular.scss';
+@import '~@fortawesome/fontawesome-free/scss/solid.scss';
+@import '~@fortawesome/fontawesome-free/scss/brands.scss';
 @import 'partials/_variables';
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 @import 'partials/_general';
