inserito alcuni commenti per migliorare (spero) la leggibilità.

--- a/src/scss/partials/_general.scss
+++ b/src/scss/partials/_general.scss
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
 }
-a {
+a { //alcune proprietà fisse della a
   text-decoration: none;
   color: $fontColor;
   font-size: 13px;
@@ -19,7 +19,7 @@ body {
 button {
   cursor: pointer;
 }
-.fab {
+.fab { //proprietà fisse delle icon dentro i button
   font-size: 20px;
   padding: 5px;
 }
